# ERS6-code-and-extras

./: Microcontroller_code.ino  README.md  demo_upper.ino
Computer/src/ers6_control/: CMakeLists.txt  package.xml
Computer/src/ers6_control/urdf/: control.xacro  control_mock_hardware.xacro
Computer/src/ers6_description/: CMakeLists.txt  package.xml
Computer/src/ers6_description/launch/: view.launch.py
Computer/src/ers6_description/meshes/: Base.stl  a0.stl  a1.stl  a2.stl  a3.stl  a4.stl  a5.stl
Computer/src/ers6_description/rviz/: view_robot.rviz
Computer/src/ers6_description/urdf/: description.xacro  ers6.urdf  ers6.urdf.xacro
Computer/src/ers6_launch/: CMakeLists.txt  package.xml
Computer/src/ers6_launch/config/: ers6_controller.yaml
Computer/src/ers6_launch/launch/: control.launch.py  display.launch.py  robot_control.launch.py  robot_description_test.launch.py  view.launch.py
Computer/src/ers6_launch/test/: loopingJointCommander.py
Robot/src/control/: CMakeLists.txt  package.xml
Robot/src/control/config/: ers6_controller.yaml
Robot/src/control/control/: control.launch.py
Robot/src/hardware/: CMakeLists.txt  package.xml
Robot/src/hardware/hardware/: ers6_system_plugin.xml
Robot/src/hardware/include/hardware/: actuator.hpp  comms.hpp  ers6_system.hpp  hardware_components.hpp
Robot/src/hardware/src/: actuator.cpp  comms.cpp  ers6_system.cpp  hardware_components.cpp
STEPfiles/: P101.step  P102.step  P103.step  P104.step  P201.step  P202.step  P203.step  P204.step  P205.step  P206.step  P301.step  P302.step  P303.step  P304.step  P401.step  P402.step  P403.step  P404.step  P405.step  P406.step  P407.step  P408.step  P409.step  P410.step  P411.step  P501.step  P502.step  P503.step  P504.step  P506.step  P507.step  P601.step  P602.step  P603.step  P606.step  W201.step  W202.step  W401.step  W402.step  W403.step  (+7 more)
